<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.less.coderdojo.LoginActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logoComplete"
        android:layout_height="125dp"
        android:layout_width="450dp"
        android:src="@drawable/logo_completo"
        android:scaleType="fitStart"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etPass"
        android:text="EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etUser"
        android:text="EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRegister"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/checkBox"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:layout_above="@+id/txtRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:id="@+id/checkBox"
        android:layout_marginBottom="23dp"
        android:layout_alignBottom="@+id/forgotPass"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
